# nebucloud-xds

./: .gitignore  .gitmodules  ANALYSIS_AND_REDESIGN.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_BLUEPRINT.md  LICENSE-APACHE  LICENSE-MIT  MILESTONES.md  README.md  cliff.toml  clippy.toml  deny.toml
.changeset/: README.md  config.json  initial-foundation.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  envoy.yml  proto-sync.yml  release.yml
crates/nebucloud-xds/: Cargo.toml
crates/nebucloud-xds/src/: lib.rs
crates/xds-cache/: Cargo.toml
crates/xds-cache/benches/: cache_benchmarks.rs
crates/xds-cache/src/: cache.rs  lib.rs  snapshot.rs  stats.rs  watch.rs
crates/xds-core/: Cargo.toml
crates/xds-core/src/: error.rs  lib.rs  node.rs  resource.rs  type_url.rs  version.rs
crates/xds-server/: Cargo.toml
crates/xds-server/src/: builder.rs  config.rs  connections.rs  delta.rs  health.rs  lib.rs  metrics.rs  protocol_tests.rs  reflection.rs  shutdown.rs  sotw.rs  stream.rs  streaming.rs  utils.rs
crates/xds-server/src/services/: ads.rs  cds.rs  eds.rs  lds.rs  mod.rs  rds.rs  sds.rs
crates/xds-types/: Cargo.toml  build.rs
crates/xds-types/src/: lib.rs
data-plane-api/: Cargo.toml  build.rs
examples/custom-control-plane/: Cargo.toml  README.md
examples/custom-control-plane/src/: conversion.rs  domain.rs  main.rs  snapshot.rs
examples/kubernetes-controller/: Cargo.toml
examples/kubernetes-controller/src/: main.rs
examples/simple-server/: Cargo.toml
examples/simple-server/src/: main.rs
proto/: Cargo.toml  build.rs
rust-control-plane/: Cargo.toml
rust-control-plane/src/: cache.rs  lib.rs  service.rs  snapshot.rs
rust-control-plane/src/cache/: snapshot.rs
rust-control-plane/src/service/: common.rs  delta_stream.rs  delta_watches.rs  discovery.rs  stream.rs  stream_handle.rs  watches.rs
rust-control-plane/src/service/discovery/: aggregated.rs  cluster.rs  endpoint.rs  extensionconfig.rs  listener.rs  route.rs  runtime.rs  scopedroute.rs  secret.rs  virtualhost.rs
rust-control-plane/src/service/stream/: test.rs
rust-control-plane/src/snapshot/: type_url.rs
scripts/: create-issues.sh
test-xds/: Cargo.toml
test-xds/envoy/: ads.yaml  config.yaml  delta_ads.yaml  delta_config.yaml
test-xds/src/: main.rs  model.rs  process.rs  test.rs  tests.rs
test-xds/src/tests/: stress_test.rs  test1.rs  test2.rs  test3.rs  test4.rs  test5.rs  test6.rs  test7.rs
tests/envoy/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
tests/envoy/src/: harness.rs  lib.rs  tests.rs
tests/integration/: Cargo.toml
tests/integration/src/: cache_tests.rs  lib.rs  load_tests.rs  snapshot_tests.rs
tools/xds-mcp/: Cargo.toml  README.md
tools/xds-mcp/src/: main.rs  protocol.rs
tools/xds-mcp/src/tools/: analyzer.rs  cargo.rs  crate_structure.rs  milestones.rs  mod.rs  search.rs
