[package]
name = "rust-control-plane"
version = "0.2.0"
edition = "2021"

[dependencies]
data-plane-api = { version = "0.2.0", path = "../data-plane-api" }
prost = "0.13.3"
tokio = {  version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.12.3"
sha2 = "0.11.0-pre.3"
async-trait = "0.1.80"
slab = "0.4.9"
tracing = "0.1.40"
futures = "0.3.30"
