[package]
name = "test-xds"
version = "0.2.0"
edition = "2021"

[dependencies]
rust-control-plane = { path = "../rust-control-plane"}
data-plane-api = { path = "../data-plane-api" }
clap = { version = "4.5.21", features = ["derive"] }
tokio = {  version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
reqwest = "0.12.9"
futures = "0.3.30"
tonic = "0.12.3"
pretty_assertions = "1.4.0"
