[package]
name = "nebucloud-xds"
description = "Production-ready xDS control plane library for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
xds-core = { workspace = true }
xds-cache = { workspace = true }
xds-server = { workspace = true }
xds-types = { workspace = true }

# Re-exported dependencies for user convenience
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["reflection", "metrics"]
reflection = ["xds-server/reflection"]
metrics = ["xds-server/metrics"]
serde = ["xds-core/serde"]
full = ["reflection", "metrics", "serde"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
