[package]
name = "xds-cache"
description = "High-performance snapshot cache for xDS resources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["xds", "cache", "snapshot", "concurrent"]
categories = ["network-programming", "caching"]

[dependencies]
xds-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async utilities
futures = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cache_benchmarks"
harness = false

[lints]
workspace = true
