[package]
name = "xds-core"
description = "Core types, traits, and error handling for xDS control plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["xds", "envoy", "types", "error-handling"]
categories = ["network-programming"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Hashing
fnv = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }

# Protobuf (for Any type)
prost = { workspace = true }
prost-types = { workspace = true }

# gRPC
tonic = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
