[package]
name = "custom-control-plane-example"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example showing how to build a custom xDS control plane for domain-specific use cases"

[dependencies]
nebucloud-xds = { path = "../../crates/nebucloud-xds" }
xds-types = { path = "../../crates/xds-types" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
