[package]
name = "kubernetes-controller-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nebucloud-xds = { path = "../../crates/nebucloud-xds" }
xds-types = { path = "../../crates/xds-types" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# Kubernetes client
kube = { version = "0.96", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
