[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nebucloud-xds = { path = "../../crates/nebucloud-xds" }
xds-core = { path = "../../crates/xds-core" }
xds-cache = { path = "../../crates/xds-cache" }
xds-server = { path = "../../crates/xds-server" }
xds-types = { path = "../../crates/xds-types" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

# Testing
rstest = { workspace = true }
pretty_assertions = { workspace = true }
