[package]
name = "xds-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "MCP (Model Context Protocol) server for nebucloud-xds project understanding"
license = "Apache-2.0"
publish = false

[[bin]]
name = "xds-mcp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and paths
walkdir = "2.5"
glob = "0.3"

# Rust source parsing (lightweight)
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# TOML parsing (for Cargo.toml files)
toml = "0.8"

# Regex for pattern matching
regex = "1.11"

[dev-dependencies]
pretty_assertions = "1.4"
